--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Moin wie geht's dir Anton?
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+mark {
+  background-color: white;
+  color: black;
+  border-radius: 25px;
+  border-style: solid;
+  border-color: blue;
+}
+</style>
+</head>
+<body>
+
+<p>A mark element is displayed like this:</p>
+
+<mark>Highlighted text!!</mark>
+
+<p>Change the default CSS settings to see the effect.</p>
+
+</body>
+</html>
