two marking regions

--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
 <head>
 <style>
-mark {
+mark1 {
   background-color: white;
   color: black;
+  border-width: 2px;
   border-radius: 25px;
   border-style: solid;
   border-color: blue;
+}
+mark2 {
+  background-color: white;
+  color: black;
+  border-width: 2px;
+  border-radius: 25px;
+  border-style: solid;
+  border-color: red;
 }
 </style>
 </head>
@@ -15,7 +24,9 @@ mark {
 
 <p>A mark element is displayed like this:</p>
 
-<mark>Highlighted text!!</mark>
+<mark1>Highlighted text!!</mark1>
+<br/>
+<mark2>Another text!</mark2>
 
 <p>Change the default CSS settings to see the effect.</p>
 
