--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ tmark {
 
 <p>A mark element is displayed like this:</p>
 
-<tmark>Title:</tmark><tmark>My</tmark><tmark>Daily</tmark><tmark>Routine</tmark><br/>
+<tmark onclick="myFunction()">Title:</tmark><tmark>My</tmark><tmark>Daily</tmark><tmark>Routine</tmark><br/>
 <br/>
 <tmark>I</tmark><tmark>wake</tmark><tmark>up</tmark><tmark>at</tmark><tmark>7</tmark><tmark>o'clock</tmark><tmark>in</tmark><tmark>the</tmark><tmark>morning.</tmark><tmark>First,</tmark><tmark>I</tmark><tmark>brush</tmark><tmark>my</tmark><tmark>teeth</tmark><tmark>and</tmark><tmark>wash</tmark><tmark>my</tmark><tmark>face.</tmark><tmark>Then,</tmark><tmark>I</tmark><tmark>have</tmark><tmark>breakfast.</tmark><tmark>I</tmark><tmark>like</tmark><tmark>to</tmark><tmark>eat</tmark><tmark>cereal</tmark><tmark>with</tmark><tmark>milk.</tmark><br/>
 <br/>
@@ -30,8 +30,16 @@ tmark {
 <br/>
 <tmark>That's</tmark><tmark>my</tmark><tmark>daily</tmark><tmark>routine.</tmark><tmark>It's</tmark><tmark>simple,</tmark><tmark>but</tmark><tmark>I</tmark><tmark>enjoy</tmark><tmark>it.</tmark><br/>
 
+<br/>
+<button onclick="myFunction()">Click me</button>
 
-<p>Change the default CSS settings to see the effect.</p>
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Hello World";
+}
+</script>
 
 </body>
 </html>
