--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ tmark:hover {
 
 <script>
 function myFunction() {
-  document.getElementById("demo").innerHTML = "Hello World";
+  document.getElementById("demo").innerHTML = "Hello Anton";
 }
 </script>
 
