--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     }
   </style>
 </head>
+
 <body>
 <br>
 <br>
@@ -52,33 +53,19 @@
 
 
 <script>
-  
-const dictionary = {
-    'in': 'Hab dich lieb Mama!',
-    'a': 'einem',
-    lush: 'Hab dich lieb Mama!',
-    prehistoric: 'prähistorischen',
-    'valley.': 'Tal',
-    waterfall: 'Wasserfall',
-    sunlight: 'Sonnenlicht',
-    glistened: 'glänzte',
-    through: 'durch',
-    the: 'das',
-    dense: 'dichte',
-    canopy: 'Blätterdach',
-    birds: 'Vögel',
-    chirped: 'zwitscherten',
-    and: 'und',
-    insects: 'Insekten',
-    buzzed: 'summten',
-    as: 'während',
-    they: 'sie',
-    explored: 'erkundeten',
-    this: 'diese',
-    ancient: 'uralte',
-    'wilderness.': 'Wildnis',
 
-};
+
+let dictionary = {};
+  
+fetch('https://github.com/moritzvitt/moritzvitt.github.io/blob/main/stories.json')
+  .then(response => response.json())
+  .then(data => {
+    // Now 'data' contains the JSON data from the external file
+    dictionary = data.translations;
+    console.log(dictionary);
+  })
+
+  .catch(error => console.error('Error fetching JSON:', error));
 
 const textContainer = document.getElementById('text-container');
 
