--- a/index.html
+++ b/index.html
@@ -1,124 +1,79 @@
 <!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-  <meta charset="UTF-8">
-  <style>
-    /* Define a class for the tooltip container */
-    .tooltip-container {
-      position: relative;
-      display: inline-block;
-      cursor: pointer; /* Add cursor pointer to indicate clickable */
-    }
+<style>
+tmark {
+  background-color: white;
+  color: black;
+  border-width: 2px;
+  border-radius: 25px;
+  border-style: solid;
+  border-color: rgba(100, 100, 255, 0.25)
+}
+tmark:hover {
+  background: rgba(100, 100, 255, 0.25);
+}
 
-    /* Style the tooltip content */
-    .tooltip-container .tooltiptext {
-      visibility: hidden;
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      border-radius: 5px;
-      padding: 5px;
+/* New CSS styles for the tooltip */ Hey Anton, hier hat ChatGPT mir natürlich geholfen, ich hoffe, ich versaue hier nix
+    .tooltip {
+      display: none; /* Hide by default */
       position: absolute;
-      z-index: 1;
-      bottom: 125%;
-      left: 50%;
-      transform: translateX(-50%);
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
-
-    /* Show the tooltip when the container is clicked */
-    .tooltip-container.active .tooltiptext {
-      visibility: visible;
-      opacity: 1;
-    }
-
-    /* Format the word with spaces between them */
-    .word {
-      white-space: pre-wrap;
-    }
-  </style>
+      background-color: #333;
+      color: white;
+      padding: 5px;
+      border-radius: 5px;
+      top: -30px; /* Adjust this value to position the tooltip */
+      left: 50%; /* Center horizontally */
+      transform: translateX(-50%); /* Center horizontally */
+    }  
+  
+.text_format {
+}
+</style>
 </head>
-
 <body>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div id="text-container">
-  <!-- The generated HTML string will replace the content here -->
-</div>
 
+<p>A mark element is displayed like this:</p>
 
+<tmark onclick="showTooltip(this)">Title</tmark>: <tmark>My</tmark> <tmark>Daily</tmark> <tmark>Routine</tmark><br/>
+<br/>
+<tmark>I</tmark> <tmark>wake</tmark> <tmark>up</tmark> <tmark>at</tmark> <tmark>7</tmark> <tmark>o'clock</tmark> <tmark>in</tmark> <tmark>the</tmark> <tmark>morning</tmark>. <tmark>First</tmark>, <tmark>I</tmark> <tmark>brush</tmark> <tmark>my</tmark> <tmark>teeth</tmark> <tmark>and</tmark> <tmark>wash</tmark> <tmark>my</tmark> <tmark>face</tmark>. <tmark>Then</tmark>, <tmark>I</tmark> <tmark>have</tmark> <tmark>breakfast</tmark>. <tmark>I</tmark> <tmark>like</tmark> <tmark>to</tmark> <tmark>eat</tmark> <tmark>cereal</tmark> <tmark>with</tmark> <tmark>milk</tmark>.<br/>
+<br/>
+<tmark>After</tmark> <tmark>breakfast</tmark>, <tmark>I</tmark> <tmark>get</tmark> <tmark>dressed</tmark> <tmark>for</tmark> <tmark>the</tmark> <tmark>day</tmark>. <tmark>I</tmark> <tmark>put</tmark> <tmark>on</tmark> <tmark>a</tmark> <tmark>shirt</tmark> <tmark>and</tmark> <tmark>pants</tmark>. <tmark>I</tmark> <tmark>also</tmark> <tmark>wear</tmark> <tmark>my</tmark> <tmark>favorite</tmark> <tmark>shoes</tmark>.<br/>
+<br/>
+<tmark>Next</tmark>, <tmark>I</tmark> <tmark>go</tmark> <tmark>to</tmark> <tmark>work</tmark>. <tmark>I</tmark> <tmark>work</tmark> <tmark>in</tmark> <tmark>an</tmark> <tmark>office</tmark>. <tmark>I</tmark> <tmark>sit</tmark> <tmark>at</tmark> <tmark>a</tmark> <tmark>desk</tmark> <tmark>and</tmark> <tmark>use</tmark> <tmark>a</tmark> <tmark>computer</tmark>. <tmark>I</tmark> <tmark>have</tmark> <tmark>lunch</tmark> <tmark>at</tmark> <tmark>noon</tmark>. <tmark>I</tmark> <tmark>usually</tmark> <tmark>bring</tmark> <tmark>a</tmark> <tmark>sandwich</tmark> <tmark>from</tmark> <tmark>home</tmark>.<br/>
+<br/>
+<tmark>In</tmark> <tmark>the</tmark> <tmark>evening</tmark>, <tmark>I</tmark> <tmark>come</tmark> <tmark>back</tmark> <tmark>home</tmark> <tmark>around</tmark> <tmark>6</tmark> <tmark>o'clock</tmark>. <tmark>I'm</tmark> <tmark>tired</tmark>, <tmark>so</tmark> <tmark>I</tmark> <tmark>relax</tmark> <tmark>on</tmark> <tmark>the</tmark> <tmark>sofa</tmark> <tmark>and</tmark> <tmark>watch</tmark> <tmark>TV</tmark>. <tmark>Sometimes</tmark>, <tmark>I</tmark> <tmark>read</tmark> <tmark>a</tmark> <tmark>book</tmark>.<br/>
+<br/>
+<tmark>For</tmark> <tmark>dinner</tmark>, <tmark>I</tmark> <tmark>cook</tmark> <tmark>something</tmark> <tmark>simple</tmark> <tmark>like</tmark> <tmark>pasta</tmark> <tmark>or</tmark> <tmark>rice</tmark>. <tmark>After</tmark> <tmark>dinner</tmark>, <tmark>I</tmark> <tmark>take</tmark> <tmark>a</tmark> <tmark>shower</tmark> <tmark>and</tmark> <tmark>get</tmark> <tmark>ready</tmark> <tmark>for</tmark> <tmark>bed</tmark>. <tmark>I</tmark> <tmark>like</tmark> <tmark>to</tmark> <tmark>sleep</tmark> <tmark>early</tmark>, <tmark>so</tmark> <tmark>I</tmark> <tmark>go</tmark> <tmark>to</tmark> <tmark>bed</tmark> <tmark>at</tmark> <tmark>10</tmark> <tmark>o'clock</tmark>.<br/>
+<br/>
+<tmark>That's</tmark> <tmark>my</tmark> <tmark>daily</tmark> <tmark>routine</tmark>. <tmark>It's</tmark> <tmark>simple</tmark>, <tmark>but</tmark> <tmark>I</tmark> <tmark>enjoy</tmark> <tmark>it</tmark>.<br/>
+
+<br/>
+
+<div class="tooltip" id="tooltip">This is a tooltip</div>
+
+<button onclick="myFunction()">Click me</button>
+<p id="demo"></p>
+  
+<button onclick="myFunction()">Click me</button>
+
+<p id="demo"></p>
 
 <script>
-
-
-let dictionary = {};
-  
-fetch('https://github.com/moritzvitt/moritzvitt.github.io/blob/main/stories.json')
-  .then(response => response.json())
-  .then(data => {
-    // Now 'data' contains the JSON data from the external file
-    dictionary = data.translations;
-    console.log(dictionary);
-  })
-
-  .catch(error => console.error('Error fetching JSON:', error));
-
-const textContainer = document.getElementById('text-container');
-
-
-// Create an array to store clicked words
-const clickedWords = [];
-
-for (const key in dictionary) {
-    if (dictionary.hasOwnProperty(key)) {
-        const tooltipContainer = document.createElement('span');
-        tooltipContainer.classList.add('tooltip-container');
-
-        // Create a span for the word
-        const wordSpan = document.createElement('span');
-        wordSpan.textContent = key + ' ';
-        wordSpan.classList.add('word');
-
-        // Create a span for the tooltip text
-        const tooltipTextSpan = document.createElement('span');
-        tooltipTextSpan.textContent = dictionary[key];
-        tooltipTextSpan.classList.add('tooltiptext');
-
-        // Append the word and tooltip text spans to the tooltip container
-        tooltipContainer.appendChild(wordSpan);
-        tooltipContainer.appendChild(tooltipTextSpan);
-
-        textContainer.appendChild(tooltipContainer);
-
-        // Add a click event listener to toggle the 'active' class
-        tooltipContainer.addEventListener('click', function(event) {
-          event.stopPropagation(); // Prevent the click event from propagating to the parent
-          tooltipContainer.classList.toggle('active');
-
-          // Check if the word is already in the array
-          const index = clickedWords.indexOf(key);
-          
-          // If it's not in the array, add it
-          if (index === -1) {
-            clickedWords.push(key);
-          } else { // If it's already in the array, remove it
-            clickedWords.splice(index, 1);
-          }
-
-          // Display the clicked words in the console
-          console.log(clickedWords);
-        });
-
-        // Add a mouseout event listener to hide the tooltip when hovering away
-        tooltipContainer.addEventListener('mouseout', function() {
-          tooltipContainer.classList.remove('active');
-        });
-    }
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Hello Anton";
 }
+
+function showTooltip(markElement) {
+      const tooltip = document.getElementById("tooltip");
+      tooltip.style.display = "block"; // Show the tooltip
+      tooltip.textContent = "This is a custom tooltip"; // Set tooltip content
+      tooltip.style.left = markElement.offsetLeft + "px"; // Position the tooltip horizontally
+    }  
+  
 </script>
 
 </body>
