--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Moritz' Simple Stories!</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
   
-<br><br><br><br><br><br>
+<br><br><br>
 <div id="text-container"> </div>
 
 <script src="script.js"></script>
