--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moritz' Simple Stories!</title>
+  <title>moritzvitt.github.io</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
+<h1>Moritz' Simple Stories!</h1>
   
 <br><br><br>
 <div id="text-container"> </div>
